# genbashrc

./: ChangeLog.md  LICENSE  README.md  genbashrc.cabal  package.yaml  stack.yaml
app/: Main.hs
src/GenBashrc/: Bash.hs  Cache.hs  Distribution.hs  FilePath.hs  Os.hs  PackageManager.hs  SystemInfo.hs  Utils.hs
src/GenBashrc/Os/: Linux.hs  MacOs.hs
