name:                   genbashrc
version:                0.1.0.0
synopsis:               EDSL and application for generating .bashrc files.
description:
  Generate @.bashrc@ using Haskell EDSL.
  .
  Most conditions, e.g. file existence checks, can be resolved in the
  generator, therefore, the result will be a very simple and optimised
  @.bashrc@ for a particular environment.
  .
  See README for more details.

homepage:               https://github.com/trskop/genbashrc#readme
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2017-2018 Peter Trško
category:               Shell, System
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:
    GenBashrc.Bash
    GenBashrc.Cache
    GenBashrc.FilePath
    GenBashrc.Os
    GenBashrc.Os.Linux
    GenBashrc.Os.MacOs
    GenBashrc.PackageManager
    GenBashrc.SystemInfo
    GenBashrc.Utils
  --other-modules:

  default-language:     Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
      base >= 4.7 && < 5

    , directory
    , filepath
    , mtl
    , text
    , tostring

  ghc-options:          -Wall

executable genbashrc
  hs-source-dirs:       app
  main-is:              Main.hs
  --other-modules:

  default-language:     Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
      base

    , base16-bytestring
    , cryptohash-sha256
    , directory
    , filepath
    , hostname
    , text
    , tostring

    , genbashrc
  ghc-options:         	-Wall -threaded -rtsopts -with-rtsopts=-N

test-suite genbashrc-test
  default-language:    	Haskell2010
  type:                	exitcode-stdio-1.0
  hs-source-dirs:      	test
  main-is:             	Spec.hs
  build-depends:
      base
    , genbashrc
  ghc-options:         	-Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:                 git
  location:             https://github.com/trskop/genbashrc
